--- a/task_3_41/css/task_3_41.css
+++ b/task_3_41/css/task_3_41.css
@@ -12,8 +12,11 @@ html, body {
   position: relative; }
 
 #caleSelect {
-  display: inline-block;
-  width: 200px;
+  width: 160px;
   height: 40px; }
 
-/*# sourceMappingURL=task_3_40.css.map */
+.container img {
+  width: 40px;
+  height: 40px; }
+
+/*# sourceMappingURL=task_3_41.css.map */
