--- a/task_3_41/scss/task_3_41.scss
+++ b/task_3_41/scss/task_3_41.scss
@@ -12,7 +12,10 @@ html,body{
 	position:relative;
 }
 #caleSelect{
-	display:inline-block;
-	width:200px;
+	width:160px;
+	height:40px;
+}
+.container img{
+	width:40px;
 	height:40px;
 }
